Modification to HTML File

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                             </a>
                         </div>
                     </div>
-                    <h4 data-aos="fade-up" data-aos-delay="200">Mario Dias</h4>
+                    <h4 data-aos="fade-up">Mario Dias</h4>
                 </div>
             </div>
         </section>
