Added github hyperlink and removed unused node related files

--- a/index.html
+++ b/index.html
@@ -361,6 +361,12 @@
                                 +91 98501 06862
                             </a>
                         </div>
+                        <div class="phone" data-aos="fade-up" data-aos-delay="200">
+                            <i class="fa-brands fa-github"></i>
+                            <a href="https://github.com/marioalbinodias" target="_blank" rel="noopener">
+                                github.com/marioalbinodias
+                            </a>
+                        </div>
                     </div>
                     <h4 data-aos="fade-up">Mario Dias</h4>
                 </div>
