Added codepen link and made other minor changes

--- a/index.html
+++ b/index.html
@@ -349,22 +349,28 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="email" data-aos="fade-up" data-aos-delay="100">
+                        <div class="contact-icon" data-aos="fade-up" data-aos-delay="100">
                             <i class="fa-solid fa-envelope"></i>
                             <a href="mailto:marioalbinodias@gmail.com">
                                 marioalbinodias@gmail.com
                             </a>
                         </div>
-                        <div class="phone" data-aos="fade-up" data-aos-delay="200">
+                        <div class="contact-icon" data-aos="fade-up" data-aos-delay="200">
                             <i class="fa-solid fa-phone"></i>
                             <a href="tel:+919850106862">
                                 +91 98501 06862
                             </a>
                         </div>
-                        <div class="phone" data-aos="fade-up" data-aos-delay="200">
+                        <div class="contact-icon" data-aos="fade-up" data-aos-delay="200">
                             <i class="fa-brands fa-github"></i>
                             <a href="https://github.com/marioalbinodias" target="_blank" rel="noopener">
                                 github.com/marioalbinodias
+                            </a>
+                        </div>
+                        <div class="contact-icon" data-aos="fade-up" data-aos-delay="200">
+                            <i class="fab fa-codepen"></i>
+                            <a href="https://codepen.io/marioalbinodias" target="_blank" rel="noopener">
+                                codepen.io/marioalbinodias
                             </a>
                         </div>
                     </div>
